
PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- add cursors to all things that are interactive
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc
- organize imports


DONE:
******* version 0.00.17 (?)
7/14/08 - move some things that should be easier to find into PHScaleConstants
7/14/08 - generalize layout code in BeakerControlNode constructor
7/14/08 - fix bar drag handlers so that we can get to min values in linear scale
7/14/08 - generalize alignment of pH slider ticks and bar graph ticks
7/14/08 - reorder some constructor args for symmetry with other interfaces
7/14/08 - constrain pH range in draggable bars via the model
7/14/08 - move pH range into model, make Liquid.setPH clamp to range
7/13/08 - organize imports
7/13/08 - add drag handlers for bars, update model as bars are dragged
7/13/08 - major reorganization and rename of packages, done in phases to workaround Subversive issues
7/13/08 - move zoom controls to their own class
7/13/08 - clean up BarGraphNode, remove some duplicate and unnecessary code
7/13/08 - refactor graph bars into their own class, BarNode
7/13/08 - javadoc BarGraphNode and BarDragHandleNode
7/13/08 - implement model-view transform for log scale bar graph
7/13/08 - implement model-view transform for linear scale bar graph
7/13/08 - add x spacing between beaker ticks and labels
7/13/08 - make beaker's minor ticks noticeably short than major ticks
7/13/08 - handle overlapping of bar drag handles and zoom buttons by putting drag handles in front
7/13/08 - move bar drag handles to top-left edge of bars so that they don't obscure bar values
7/13/08 - implement bar updaters in terms of BarGraphNode.calculateBarLength
7/12/08 - rename "soda" to "soda pop"
7/12/08 - move origin to the geometric center of drag handle
7/12/08 - fix horizontal positioning of bars and their drag handles