@@ -13,7 +13,7 @@ import javax.swing.JPanel;
 import javax.swing.JRadioButton;
 
 import edu.colorado.phet.common.phetcommon.view.util.EasyGridBagLayout;
-import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
+import edu.colorado.phet.phscale.PHScaleConstants;
 import edu.colorado.phet.phscale.PHScaleStrings;
 
 /**
@@ -28,7 +28,7 @@ public class ScaleControlPanel extends JPanel {
     // Class data
     //----------------------------------------------------------------------------
     
-    private static final Font CONTROL_FONT = new PhetFont( Font.PLAIN, 18 );;
+    private static final Font CONTROL_FONT = PHScaleConstants.CONTROL_FONT;
     
     //----------------------------------------------------------------------------
     // Instance data
